feat: add GitHub Actions updates configuration to Dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,3 +32,27 @@ updates:
       docker-images:
         patterns:
           - "*"
+
+  # Update GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "saturday"
+      time: "05:22"
+      timezone: "UTC"
+    open-pull-requests-limit: 3
+    labels:
+      - "dependencies"
+      - "github-actions"
+      - "automated"
+    commit-message:
+      prefix: "ci"
+      include: "scope"
+    reviewers:
+      - "hungrybluedev"
+    # Group all GitHub Actions updates together
+    groups:
+      github-actions:
+        patterns:
+          - "*"
